# zen-des-tages

./: package.json
.github/workflows/: build.yml  portable.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
