[package]
name = "zen-des-tages"
version = "1.0.0"
description = "Zen Quote of the Day"
authors = ["Abelssoft"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
